# browser-use-python/src/browser_use_sdk/v3/resources/browsers.py
@@ -35,6 +35,8 @@ class Browsers:
         browser_screen_width: int | None = None,
         browser_screen_height: int | None = None,
         allow_resizing: bool | None = None,
+        pdf_renderer_enabled: bool | None = None,
+        solve_captchas: bool | None = None,
         custom_proxy: CustomProxy | None = None,
         enable_recording: bool | None = None,
         **extra: Any,
@@ -56,6 +58,10 @@ class Browsers:
             body["browserScreenHeight"] = browser_screen_height
         if allow_resizing is not None:
             body["allowResizing"] = allow_resizing
+        if pdf_renderer_enabled is not None:
+            body["pdfRendererEnabled"] = pdf_renderer_enabled
+        if solve_captchas is not None:
+            body["solveCaptchas"] = solve_captchas
         if custom_proxy is not None:
             body["customProxy"] = custom_proxy.model_dump(
                 by_alias=True, exclude_none=True
@@ -145,6 +151,8 @@ class AsyncBrowsers:
         browser_screen_width: int | None = None,
         browser_screen_height: int | None = None,
         allow_resizing: bool | None = None,
+        pdf_renderer_enabled: bool | None = None,
+        solve_captchas: bool | None = None,
         custom_proxy: CustomProxy | None = None,
         enable_recording: bool | None = None,
         **extra: Any,
@@ -166,6 +174,10 @@ class AsyncBrowsers:
             body["browserScreenHeight"] = browser_screen_height
         if allow_resizing is not None:
             body["allowResizing"] = allow_resizing
+        if pdf_renderer_enabled is not None:
+            body["pdfRendererEnabled"] = pdf_renderer_enabled
+        if solve_captchas is not None:
+            body["solveCaptchas"] = solve_captchas
         if custom_proxy is not None:
             body["customProxy"] = custom_proxy.model_dump(
                 by_alias=True, exclude_none=True
